# fsbank-server

./: .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  ReadMe.md  fsbank-server.sublime-project  insound-server.sublime-project  main.cpp  run  run.py
cmake/Modules/: ConfigMessages.cmake  FormatBuildType.cmake
insound/: App.cpp  App.h  BankBuilder.cpp  BankBuilder.h  CMakeLists.txt  app.cpp  app.h  chrono.cpp  chrono.h  common.h  definitions.h  definitions.h.in  env.cpp  env.h  format.h  json.cpp  json.h  jwt.cpp  jwt.h  log.cpp  log.h  mongo.cpp  mongo.h  password.cpp  password.h  request.cpp  request.h  server.cpp  server.h  util.h
insound/controllers/api/: auth.cpp  auth.h
insound/core/: App.h  BankBuilder.cpp  BankBuilder.h  CMakeLists.txt  ContentType.cpp  ContentType.h  HttpStatus.h  HttpStatus.json.h  MultipartMap.cpp  MultipartMap.h  Response.h  Router.cpp  Router.h  ZipWriter.cpp  ZipWriter.h  chrono.h  definitions.h.in  email.cpp  email.h  env.cpp  env.h  format.h  json.h  jwt.cpp  jwt.h  log.h  mongo.cpp  mongo.h  password.cpp  password.h  platform.h  regex.cpp  regex.h  request.cpp  request.h  s3.cpp  s3.h  settings.cpp  settings.h  util.cpp  (+1 more)
insound/core/errors/: AwsS3Error.h  CurlError.cpp  CurlHeaderError.cpp  CurlHeaderError.h  GlazeError.cpp  GlazeError.h  JwtError.cpp  JwtError.h  MissingEnvError.h
insound/core/middleware/: Helmet.cpp  Helmet.h  UserAuth.cpp  UserAuth.h  UserAuth.hpp
insound/core/mongo/: Document.h  Id.h  Model.h
insound/core/schemas/: FormErrors.h  FormErrors.json.h  ReadMe.md  User.cpp  User.h  User.json.h
insound/errors/: CurlError.h  ExpiredTokenError.cpp  ExpiredTokenError.h  MissingEnvError.h
insound/middleware/: UserAuth.cpp  UserAuth.hpp  UserContext.cpp  UserContext.hpp  requireLogin.h
insound/models/: Document.h  Model.h
insound/mongo/: Document.h  Model.h
insound/routes/: Router.cpp  Router.h
insound/routes/api/: auth.cpp  auth.h
insound/schemas/: User.cpp  User.h
insound/server/: CMakeLists.txt  CsrfCheck.cpp  Insound.cpp  Server.cpp  Server.h  emails.cpp  emails.h  main.cpp  strings.cpp  strings.h
insound/server/middleware/: CsrfCheck.cpp  CsrfCheck.h  Security.cpp  Security.h
insound/server/models/: Track.cpp  Track.h  Track.json.h
insound/server/routes/api/: auth.cpp  auth.h  test.cpp  test.h
insound/server/templates/: index.html
insound/tests/: CMakeLists.txt  definitions.h.in  env.h  main.cpp  test-env  test.h
insound/tests/insound/: BankBuilder.test.cpp  env.test.cpp  json.test.cpp  jwt.test.cpp  mongo.test.cpp  password.test.cpp  regex.test.cpp  request.test.cpp  s3.test.cpp
insound/tests/insound/schemas/: User.test.cpp
lib/: CMakeLists.txt
lib/fmod/: CMakeLists.txt
lib/fmod/lib/macos/: libfmod.dylib  libfmodL.dylib
lib/fsbank/: CMakeLists.txt
lib/fsbank/lib/linux/: libfsbank.so.13  libfsbankL.so.13
lib/fsbank/lib/macos/: libfsbank.dylib  libfsbankL.dylib  libopus.dylib
src/: BankBuilder.cpp  BankBuilder.h  env.cpp  env.h  main.cpp  platform.h  server.cpp  server.h  util.cpp  util.h
src/controllers/: auth.cpp
tests/: CMakeLists.txt  env.test.cpp  jwt.test.cpp  mongo.test.cpp  password.test.cpp  request.test.cpp  test-env
tests/schemas/: User.test.cpp
