set (ALLOW_DUPLICATE_CUSTOM_TARGETS ON)

add_subdirectory (bcrypt)
add_subdirectory (Catch2)
add_subdirectory (Crow)
add_subdirectory (fmod)
add_subdirectory (fsbank)
add_subdirectory (glaze)
add_subdirectory (jwt-cpp)
add_subdirectory (mongo-cxx-driver)

set (SPDLOG_BUILD_SHARED OFF)
set (BUILD_SHARED_LIBS OFF)
add_subdirectory (spdlog)
add_subdirectory (zip)
